@@ -1,4 +1,4 @@
-/* $Id: tmux.h,v 1.160 2008-06-21 10:19:36 nicm Exp $ */
+/* $Id: tmux.h,v 1.161 2008-06-21 14:11:39 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -881,6 +881,7 @@ struct session 	*arg_parse_session(const char *);
 int		 arg_parse_window(const char *, struct session **, int *);
 
 /* cmd.c */
+char		*cmd_complete(const char *);
 struct cmd	*cmd_parse(int, char **, char **);
 void		 cmd_exec(struct cmd *, struct cmd_ctx *);
 void		 cmd_send(struct cmd *, struct buffer *);
